--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 # requirements.txt
-python-dotenv>=1.0.0
-langchain>=0.1.0
-langgraph>=0.0.20
-openai>=1.1.0
-anthropic>=0.8.0
-psycopg2-binary>=2.9.9
-pgvector>=0.2.0
-boto3>=1.28.0
-transformers>=4.35.0
-torch>=2.1.0
-numpy>=1.24.0
-pandas>=2.0.0
-fastapi>=0.105.0
-uvicorn>=0.24.0
+python-dotenv==1.0.0
+langchain==0.1.4
+langgraph==0.0.20
+openai==1.12.0
+anthropic==0.8.0
+psycopg2-binary==2.9.9
+pgvector==0.2.3
+boto3==1.34.11
+transformers==4.38.2
+torch==2.1.2
+numpy==1.24.4
+pandas==2.0.3
+fastapi==0.109.2
+uvicorn==0.24.0
+pydantic==2.5.2
+sqlalchemy==2.0.25
+alembic==1.13.1
+jwt==1.3.1
+requests==2.31.0
+python-multipart==0.0.6
+aws-amplify==0.1.0
+deepeval==0.20.7
+redis==5.0.1
